# PromptSQL

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
scripts/: check-i18n.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/ai/: auto_mode.rs  config.rs  context.rs  conversations.rs  mod.rs  models.rs  prompt.rs  provider.rs  rag.rs  router.rs  streaming.rs
src-tauri/src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/db/: connection.rs  mod.rs  sql_guard.rs  table_ops.rs
src-tauri/src/storage/: connections.rs  history.rs  mod.rs
src/components/ai/: AIChatMenu.tsx  AIChatPanel.tsx  AIHistoryModal.tsx  AITabBar.tsx  AutoQueryResult.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessageList.tsx  CodeBlock.tsx  GeminiRequiredModal.tsx  MentionDropdown.tsx  MentionText.tsx  ModelSelector.tsx  QueryConfirmDialog.tsx  RAGCompletedModal.tsx  RagConsentModal.tsx
src/components/common/: ConfirmModal.tsx  CustomSelect.tsx  Icons.tsx  Modal.tsx  ResizableDataTable.tsx  ResizableSidebar.tsx  Sidebar.tsx
src/components/table/: InfoView.tsx  (+11 more)
src/hooks/: useClampedPosition.ts  useSortedRows.ts
src/i18n/: index.ts
src/lib/: tauri.ts
src/stores/: aiStore.ts  connectionStore.ts  historyStore.ts  tabStore.ts
src/styles/: index.css
src/utils/: copyUtils.ts  sqlUtils.ts
(+26 files in other folders)
